chore(CO-3493): add --enable-preview jvm flag