@@ -656,10 +656,21 @@
 
       <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.13.0</version>
+          <configuration>
+              <compilerArgs>
+                  <arg>--enable-preview</arg>
+              </compilerArgs>
+          </configuration>
+      </plugin>
+
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.5.4</version>
           <configuration>
-              <argLine>${argLine}</argLine>
+              <argLine>${argLine} --enable-preview</argLine>
           </configuration>
       </plugin>
 
@@ -672,6 +683,7 @@
               <forkCount>1</forkCount>
               <argLine>
                   ${argLine}
+                  --enable-preview
                   --illegal-access=permit
                   -Xmx1024m
                   -ea
